# neovim-qt

./: CMakeLists.txt
src/: CMakeLists.txt
src/gui/: mainwindow.cpp  mainwindow.h  shell.cpp  shell.h
src/gui/runtime/plugin/: nvim_gui_shim.vim
src/gui/shellwidget/: shellwidget.cpp  shellwidget.h
